--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.99.0",
     "sweetalert2": "^6.10.1",
-    "vue": "^2.0.8",
+    "vue": "^2.5.2",
     "vuedraggable": "^2.14.1",
     "yerbamate": "^2.0.1"
   },
   "devDependencies": {
+    "browserify": "^14.4.0",
     "chai": "^4.0.2",
     "cross-env": "^5.0.5",
     "electron": "^1.7.8",
     "electron-builder": "^19.36.0",
     "electron-packager": "^9.1.0",
     "eslint": "^4.8.0",
-    "eslint-config-vue": "^2.0.2",
     "eslint-plugin-vue": "^3.13.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "pre-commit": "^1.2.2",
-    "sinon": "^4.0.1"
+    "sinon": "^4.0.1",
+    "vueify": "^9.4.1"
   },
   "config": {
     "ignore": "(coverage|\\.travis.yml|\\.gitignore|test|\\.eslintrc)",
@@ -36,28 +37,42 @@
     "test": "istanbul cover _mocha && npm run lint",
     "start": "electron .",
     "start-dev": "cross-env NODE_ENV=dev npm start",
-    "build-electron": "electron-packager . --overwrite --out builds --ignore $npm_package_config_ignore --icon=$npm_package_config_icon",
-    "build-electron-all": "npm run clean && npm run build-electron -- --platform=win32 && npm run build-electron -- --platform=linux && npm run build-electron -- --platform=darwin",
+    "browserify-debug": "browserify -t vueify --no-builtins --no-commondir --insert-global-vars=\"global\" -e app.js -o resources/bundle.js --debug",
+    "browserify": "browserify -t vueify --no-builtins --no-commondir --insert-global-vars=\"global\" -e app.js -o resources/bundle.js",
+    "prestart": "npm run browserify-debug",
     "clean": "rm -rf builds config.json tasks.json coverage dist",
     "lint": "eslint *.js app test",
-    "dist": "npm run clean && electron-builder -wl"
+    "bare-build": "npm run browserify && electron-packager . --overwrite --out dist --ignore $npm_package_config_ignore --icon=$npm_package_config_icon",
+    "dist": "npm run clean && npm run browserify && electron-builder -mwl"
   },
-  "build":{
-      "appId": "angrykoala.gaucho",
-      "linux":{
-          "target": ["deb", "rpm", "AppImage"],
-          "category": "Utility"
-      },
-      "win": {
-          "target": ["nsis", "portable"]
-      },
-      "mac": {
-          "target": ["dir"],
-          "category": "public.app-category.developer-tools"
-      },
-      "directories":{
-          "buildResources": "build_resources"
-      }
+  "browser": {
+    "electron": false
+  },
+  "build": {
+    "appId": "angrykoala.gaucho",
+    "linux": {
+      "target": [
+        "deb",
+        "rpm",
+        "AppImage"
+      ],
+      "category": "Utility"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "mac": {
+      "target": [
+        "dir"
+      ],
+      "category": "public.app-category.developer-tools"
+    },
+    "directories": {
+      "buildResources": "build_resources"
+    }
   },
   "pre-commit": [
     "test",
